--- a/src/KLoggy.Web/Views/Home/Index.cshtml
+++ b/src/KLoggy.Web/Views/Home/Index.cshtml
@@ -12,14 +12,8 @@
     </div>
     <div class="col-md-4">
         <hr />
-
-        <ul id="badge-list">
-            <li><a class="btn btn-info" href="http://twitter.com/tourismgeek"><i class="fa fa-twitter fa-lg"></i></a></li>
-            <li><a class="btn btn-info" href="http://www.linkedin.com/in/tugberk"><i class="fa fa-linkedin fa-lg"></i></a></li>
-            <li><a class="btn btn-info" href="http://github.com/tugberkugurlu"><i class="fa fa-github fa-lg"></i></a></li>
-            <li><a class="btn btn-info" href="http://stackoverflow.com/users/463785/tugberk"><i class="fa fa-stack-exchange fa-lg"></i></a></li>
-            <li><a class="btn btn-info" href="/Feeds/Rss"><i class="fa fa-rss fa-lg"></i></a></li>
-        </ul>
+        
+        @await Component.InvokeAsync("Badges")
     </div>
 </body>
 </html>
