added CustomMvcRazorHost which adds a new Chunk

--- a/src/KLoggy.Web/Views/Home/Index.cshtml
+++ b/src/KLoggy.Web/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
 <body>
     <div class="col-md-8" ng-app="mainApp">
         <hr />
+        @Assets.GetThing()
     </div>
     <div class="col-md-4">
         <hr />
